spotify_chat/assets/styles/chat.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

* {
    font-family: 'Open Sans', sans-serif;
    /* color: #7e7e7e; */
}

html {
    scroll-behavior: smooth;
}

html, body, main {
    width: 100%;
    height: 100%;
}

body, main, nav, #content_area, form, #chat_box  {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

body {
    background-color: #ebebeb;
}

main {
    background-color: #f6f6f6;
    width: 100%;
    height: 100%;
    max-height: 812px;
    max-width: 375px;
    overflow-y: scroll;
    overflow-x: hidden;
    border: .5rem solid #ddd;
    border-radius: 1.75rem;
    overflow: hidden;
}

nav {
    flex-direction: row;
    justify-content: space-between;
    background-color:#ebebeb;
    width: 100%;
    height: 10%;
    padding: 0 1rem;
}

nav button {
    /* margin: 0 .5rem 0 0; */
}

.nav_end {
    width: 42px;
    pointer-events: none;
}

#title {
    font-size: 1.25rem;
    margin-left: calc(50% -26px);
}

#content_area {
    width: 100%;
    height: 90%;
}

form {
    display: none;
    width: 100%;
}

select {
    width: 100%;
    padding: 1.5rem;
    height: 50%;
}

select option {
    margin: 0 !important;
    height: 20%;
    display: flex;
    align-items: center;
}

.prompt_form * {
    margin: .5rem 0;
}

.prompt_form {
    height: 100%;
}

button, input {
    background-color: white;
    padding: .75rem 1rem;
    border-radius: .25rem;
    box-shadow: -2px 2px 4px #c5c5c5;
}

button {
    background-color: #7e7e7e;
    color: white;
}

form button {
    background-color: rgb(75 165 7);
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

#login_button {
    margin-bottom: 6rem;
}

#back_button {
    display: none;
}

#sign_up_button {
    background-color: #0089ff;
}

/* Chat Form */

#chat_form {
    height: 100%;
}

#chat_box {
    width: 100%;
    height: 92%;
    overflow-y: scroll;
    overflow-x: hidden;
    justify-content: flex-start;
    padding: 1rem;
}

.from_me {
    align-self: flex-end;
    border-radius: .5rem .5rem 0 .5rem;
    background-color: black;
    color: white;
}

.from_them {
    align-self: flex-start;
    border-radius: .5rem .5rem .5rem 0;
    background-color: white;
    color: black;
}

#chat_controls {
    display: flex;
    flex-direction: row;
    align-self: flex-end;
    justify-content: space-between;
    width: 100%;
    height: 8%;
}

#chat_controls * {
    box-shadow: none;
    border-radius: 0;
}

input#message_input {
    border: .5rem 0 0 .5rem !important;
    width: 70%;
    padding-left: 1.25rem;
    overflow-y: hidden;
}

button#send_button {
    width: 30%;
}

.message {
    padding: 1rem;
    box-shadow: -2px 2px 4px #c5c5c5;
    margin-bottom: .5rem;
    max-width: 80%;
}

.time {
    font-size: 12px;
    margin-top: .2rem;
    font-style: italic;
}

.message:last-of-type {
    margin-bottom: 0;
}

#status {
    margin: 2rem 0;
}

/* Profile */

#profile_button {
    display: none;
}

#profile_form {
    height: 100%;
}

.profile_section {
    width: 100%;
    height: 50%;
    display: flex;
    flex-direction: column;
}

#profile_top {
    background-color: #ebebeb;
    justify-content: space-between;
    align-items: center;
}

#profile_top * {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin: .25rem 0;
}

#profile_btm {
    padding: 1rem;
    
}

.stat_li {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-bottom: .5rem;
    justify-content: space-between;
    padding: .75rem;
    /* background-color: #ebebeb; */
    border-bottom: 1px #ebebeb solid;
}

.stat_li:last-of-type {
    margin-bottom: 0;
    border: none;
}

/* Checkbox on form */

.checkboxes {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding: 0 2rem;
}

.checkboxes span {
    background-color: white;
    padding: 0 .5rem;
    border-radius: .25rem;
    box-shadow: -2px 2px 4px #c5c5c5;
    width: 201px;
}

.lf_checkbox {
    margin-right: .5rem;
    pointer-events: none;
}

/* Player */

#anthem_wrap {
    margin: 0 !important;
    width: 100%;
    align-items: flex-start;
}

iframe {
    height: 5rem;
    border-radius: 1rem 1rem 0 0;
    width: 100%;
    margin: 0 !important;
}

#stat_anthem_label {
    font-weight: bold;
    margin-left: 1rem;
}

#sign_up_form {
    overflow-y: scroll;
    justify-content: flex-start;
}

select#school_input {
    border-radius: .25rem;
    padding: 9px .75rem;
    width: 201px;
    box-shadow: -2px 2px 4px #c5c5c5;
}

#school_input option {
    padding: 1rem 0;
}

.row {
    display: flex;
    flex-direction: row !important;
}

